--- a/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
@@ -116,8 +116,9 @@
                                 <td>
                                     <form method="post" action="~/HTMLTEMP/Exclusao/delete_sala.cshtml">
                                         <input type="text" style="visibility:hidden" id="salaid" name="salaid" value="@salas.idsala" />
-                                        <input type="submit" value="Remover" />
-                                        
+                                        <button>
+                                            <span class="glyphicon glyphicon-remove-circle"></span> Remover
+                                        </button>
                                     </form>
                                 </td>
                             </tr>
