--- a/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
@@ -129,12 +129,20 @@
                             <td>@turmas.idsala</td>
                             <td>@turmas.idprofe</td>
                             <td>
-                                <a href="#Editar" class="btn_edit">
-                                    <span class="glyphicon glyphicon-edit"></span> Editar
-                                </a>
-                                <a href="#Remover" class="btn_remove">
-                                    <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                </a>
+                                <form method="post" action="#editar">
+                                    <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
+                                    <button class="btn_edit">
+                                        <span class="glyphicon glyphicon-edit"></span> Editar
+                                    </button>
+                                </form>
+
+                                <form method="post" action="~/HTMLTEMP/Exclusao/delete_turma.cshtml">
+                                    <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
+
+                                    <button class="btn_remove">
+                                        <span class="glyphicon glyphicon-remove-circle"></span> Remover
+                                    </button>
+                                </form>
                             </td>
                         </tr>
                             
