--- a/Projeto_Final/HTMLCSS/CSS/main.css
+++ b/Projeto_Final/HTMLCSS/CSS/main.css
@@ -2,7 +2,7 @@
     margin: 0;
     min-height: 100%;
     box-sizing: border-box;
-    background: linear-gradient(0deg, rgba(217,238,225,1) 24%, rgba(150,212,212,1) 88%);
+    background-color: #eeeeee;
 }
 
 
@@ -81,3 +81,53 @@ img {
     }
 }
 
+.sidenews-container {
+    max-width: 550px;
+    max-height: 850px;
+    background-color: #ebebeb;
+    float: right;
+}
+
+.sidenews-text {
+    padding-top: 18px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+hr.green-line {
+    border: 5px solid #5dff3e;
+    border-radius: 5px;
+    width: 150px;
+    float: left;
+}
+
+.sidenews-text a{
+    color: black;
+    font-family: 'Bebas Neue';
+    text-decoration: none;
+}
+
+.sidenews-text p {
+    font-family: 'Roboto';
+    font-size: 15px;
+    font-weight: lighter;
+}
+
+.texto-container {
+    max-width: 550px;
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.4);
+    -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+    -moz-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+    box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+    float: left;
+}
+
+.texto-texto {
+    padding-top: 18px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: left;
+    font-size: 20px;
+    font-family: 'Abel';
+}
