--- a/Projeto_Final/HTMLCSS/main.cshtml
+++ b/Projeto_Final/HTMLCSS/main.cshtml
@@ -1,10 +1,15 @@
-﻿@{ 
+﻿@using Projeto_Final.CSHARP;
+@{
+    
+    BancoDeDados.DBConnect();
     //Variavel de controle
+    
     Boolean logado = false;
 
     //Cria o obj cookie e recebe o mesmo pelo obj Request
 
     HttpCookie cookie = Request.Cookies["UserLogin"];
+    HttpCookie cookiecpf = Request.Cookies["UserLogin"];
 
     if (cookie != null)
     {
@@ -95,7 +100,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="#">
+                <a href="~/HTMLCSS/user_area.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -155,89 +160,91 @@
                     <span class="dot" onclick="currentSlide(4)"></span>
                 </div>
                 <br />
-                <!-- Paragrafos -->
-                <div class="texto-container">
-                    <div class="texto-texto">
-                        <p>
-                            <strong>
-                                Somos curiosos e tecnológicos. Somos Cenai. Desde 1942,
-                                oferecemos educação e serviços que auxiliam no
-                                desenvolvimento da indústria e dos gaúchos.
-                            </strong>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua. Urna duis convallis convallis tellus id interdum velit. Quam adipiscing
-                            vitae proin sagittis nisl rhoncus mattis. Praesent semper feugiat nib
-                            h sed pulvinar proin gravida hendrerit lectus. Aliquet risus feugiat
-                            in ante metus. Volutpat odio facilisis mauris sit amet massa vitae.
-                            Risus sed vulputate odio ut enim. Purus sit amet volutpat consequat
-                            mauris nunc congue. Cras sed felis eget velit aliquet sagittis id
-                            consectetur. Eu consequat ac felis donec.
 
-                            Ante metus dictum at tempor commodo ullamcorper a lacus.
-                            Est ullamcorper eget nulla facilisi etiam dignissim diam
-                            quis enim. Egestas tellus rutrum tellus pellentesque eu
-                            tincidunt tortor aliquam. Quis viverra nibh cras pulvina
-                            r mattis. Odio ut sem nulla pharetra. Ornare massa eget
-                            egestas purus viverra accumsan in. A cras semper auctor
-                            neque vitae tempus quam pellentesque. Habitasse platea d
-                            ictumst quisque sagittis purus sit amet. Rhoncus aenean
-                            vel elit scelerisque mauris. Lorem dolor sed viverra i
-                            psum nunc aliquet bibendum enim. Aliquam ut porttitor
-                            leo a diam sollicitudin tempor. Id cursus metus aliquam
-                            eleifend. Elementum sagittis vitae et leo duis. At tellus
-                            at urna condimentum mattis pellentesque id. Enim nec dui
-                            nunc mattis enim. Penatibus et magnis dis parturient montes
-                            nascetur. Iaculis nunc sed augue lacus viverra vitae. Malesuada
-                            fames ac turpis egestas sed tempus urna et pharetra. At auctor
-                            urna nunc id cursus metus aliquam eleifend mi.
-                        </p>
-                    </div>
+
+                        <!-- Paragrafos -->
+                        <div class="texto-container">
+                            <div class="texto-texto">
+                                <p>
+                                    <strong>
+                                        Somos curiosos e tecnológicos. Somos Cenai. Desde 1942,
+                                        oferecemos educação e serviços que auxiliam no
+                                        desenvolvimento da indústria e dos gaúchos.
+                                    </strong>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                                    aliqua. Urna duis convallis convallis tellus id interdum velit. Quam adipiscing
+                                    vitae proin sagittis nisl rhoncus mattis. Praesent semper feugiat nib
+                                    h sed pulvinar proin gravida hendrerit lectus. Aliquet risus feugiat
+                                    in ante metus. Volutpat odio facilisis mauris sit amet massa vitae.
+                                    Risus sed vulputate odio ut enim. Purus sit amet volutpat consequat
+                                    mauris nunc congue. Cras sed felis eget velit aliquet sagittis id
+                                    consectetur. Eu consequat ac felis donec.
+
+                                    Ante metus dictum at tempor commodo ullamcorper a lacus.
+                                    Est ullamcorper eget nulla facilisi etiam dignissim diam
+                                    quis enim. Egestas tellus rutrum tellus pellentesque eu
+                                    tincidunt tortor aliquam. Quis viverra nibh cras pulvina
+                                    r mattis. Odio ut sem nulla pharetra. Ornare massa eget
+                                    egestas purus viverra accumsan in. A cras semper auctor
+                                    neque vitae tempus quam pellentesque. Habitasse platea d
+                                    ictumst quisque sagittis purus sit amet. Rhoncus aenean
+                                    vel elit scelerisque mauris. Lorem dolor sed viverra i
+                                    psum nunc aliquet bibendum enim. Aliquam ut porttitor
+                                    leo a diam sollicitudin tempor. Id cursus metus aliquam
+                                    eleifend. Elementum sagittis vitae et leo duis. At tellus
+                                    at urna condimentum mattis pellentesque id. Enim nec dui
+                                    nunc mattis enim. Penatibus et magnis dis parturient montes
+                                    nascetur. Iaculis nunc sed augue lacus viverra vitae. Malesuada
+                                    fames ac turpis egestas sed tempus urna et pharetra. At auctor
+                                    urna nunc id cursus metus aliquam eleifend mi.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="sidenews-container">
+                            <div class="sidenews-text">
+                                <hr class="green-line" /><br />
+                                <p> 25/08/2022 </p>
+                                <a href="#">
+                                    <h3>
+                                        Unidades do Cenai-RS comemoram aniversário
+                                    </h3>
+                                </a>
+                                <br />
+
+                                <p>Indústria e Desenvolvimento</p>
+                                <hr />
+
+                                <hr class="green-line" /><br />
+                                <p> 24/08/2022 </p>
+                                <a href="#">
+                                    <h3>
+                                        Mais cursos de Técnologia chegam ao Cenai-RS
+                                    </h3>
+                                </a>
+                                <br />
+
+                                <p>Indústria e Desenvolvimento</p>
+                                <hr />
+
+
+                                <hr class="green-line" /><br />
+                                <p> 19/08/2022 </p>
+                                <a href="#">
+                                    <h3>
+                                        Jovem Aprendiz: tudo o que você precisa saber sobre o programa
+                                    </h3>
+                                </a>
+                                <br />
+
+                                <p>Indústria e Desenvolvimento</p>
+                                <hr />
+
+                            </div>
+                        </div>
+
                 </div>
-
-                <div class="sidenews-container">
-                    <div class="sidenews-text">
-                        <hr class="green-line" /><br />
-                        <p> 25/08/2022 </p>
-                        <a href="#">
-                            <h3>
-                                Unidades do Cenai-RS comemoram aniversário
-                            </h3>
-                        </a>
-                            <br />
-
-                            <p>Indústria e Desenvolvimento</p>
-                            <hr />
-
-                            <hr class="green-line" /><br />
-                            <p> 24/08/2022 </p>
-                            <a href="#">
-                                <h3>
-                                    Mais cursos de Técnologia chegam ao Cenai-RS
-                                </h3>
-                            </a>
-                            <br />
-
-                            <p>Indústria e Desenvolvimento</p>
-                            <hr />
-
-
-                            <hr class="green-line" /><br />
-                            <p> 19/08/2022 </p>
-                            <a href="#">
-                                <h3>
-                                    Jovem Aprendiz: tudo o que você precisa saber sobre o programa
-                                </h3>
-                            </a>
-                            <br />
-
-                            <p>Indústria e Desenvolvimento</p>
-                            <hr />
-
-                    </div>
-                </div>
-
-            </div>
         </main>
     </section>
     <script src="~/JS/Index.js"></script>
