--- a/Projeto_Final/HTMLCSS/user_area.cshtml
+++ b/Projeto_Final/HTMLCSS/user_area.cshtml
@@ -1,24 +1,38 @@
-﻿@using Projeto_Final.CSHARP
-@{
+﻿@using Projeto_Final.CSHARP;
+@{ 
     BancoDeDados.DBConnect();
+    Boolean logado = false;
+    HttpCookie cookie = Request.Cookies["UserLogin"];
+    HttpCookie cookiecpf = Request.Cookies["UserLogin"];
+
+    string usercpf = cookiecpf.Value.ToString();
+
+    if (cookie != null)
+    {
+        logado = true;
+    }
+
+    pessoa usuario = new pessoa();
+
+    usuario.cpf = cookiecpf.Value.ToString();
 }
 
 <!DOCTYPE html>
-<html>
+<html >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--FONTE-->
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <!--ICONES-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,1,-25" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!--css-->
+    <!--CSS-->
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
-    <link rel="stylesheet" href="~/HTMLCSS/CSS/Listagem.css" />
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/userarea.css" />
+
     <title>CENAI</title>
 </head>
 <body div class="bg">
@@ -40,7 +54,7 @@
                 <!--MATRICULA OPCOES-->
                 <div class="dropdown-container">
                     <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                    <a class="active" href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
                 </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
@@ -86,7 +100,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="#">
+                <a class="active" href="#">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -98,45 +112,62 @@
             </div>
         </nav>
 
-        <div class="content" id="content">
-            
-            <br />
-            <div class="lista" id="lista">
-                <center>
-                    <table>
-                        <tr>
-                            <th><a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">TURMA</a></th>
-                            <th><a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_curso.cshtml">CURSO</a></th>
-                            <th><a href="~/HTMLCSS/Listagem/Lista_alunos/aluno.cshtml">ALUNO</a></th>
-                        </tr>
-                        @{List<matricula> lista = Funcoes.Listagem_Matricula();}
-                       
-                            @foreach (matricula matriculados in lista)
+        <main>
+            <div class="content" id="content">
+                <div class="userinfo-container">
+                    <div class="userinfo">
+                        <h1>INFORMAÇÕES DO USUARIO</h1>
+                        @{List<pessoa> lista = Funcoes.Info_User(usuario);}
+                        @foreach (pessoa listagempessoa in lista)
+                        {
+                            <h3>CPF</h3>
+                            <p>@listagempessoa.cpf</p>
+
+                            <h3>NOME</h3>
+                            <p>@listagempessoa.nome</p>
+
+                            <h3>EMAIL</h3>
+                            <p>@listagempessoa.email</p>
+
+                            <h3>TELEFONE</h3>
+                            <p>@listagempessoa.telefone</p>
+
+                        }
+                        <a href="#Editar">
+                            Editar <span class="material-symbols-outlined">edit_note</span>
+                        </a>
+                    </div>
+                </div>
+
+                    <div class="turmainfo-container">
+                        <div class="turmainfo">
+                            <h1>MATRICULA DO USUARIO</h1>
+                            @{List<matricula> lista_mat = Funcoes.InfoUser_matric(usercpf);}
+                            @foreach (matricula matriculados in lista_mat)
                             {
-                                <tr>
-                                    <td>@matriculados.idmatricula</td>
-                                    <td>@matriculados.idaluno</td>
-                                    <td>@matriculados.idturma</td>
-                                    <td>@matriculados.idturma</td>
-                                    <td>
-                                        <a href="#Editar" class="btn_edit">
-                                            <span class="glyphicon glyphicon-edit"></span> Editar
-                                        </a>
-                                        <a href="#Remover" class="btn_remove">
-                                            <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                        </a>
-                                    </td>
-                                </tr>
+                                <h3>TURMA</h3>
+                                <p>@matriculados.idmatricula</p>
+
+                                <h3>CURSO</h3>
+                                <p>@matriculados.idaluno</p>
+
+                                <h3>TURNO</h3>
+                                <p>@matriculados.idturma</p>
+
+                                <h3>SALA</h3>
+                                <p>@matriculados.extraum</p>
+
+                                <h3>PROFESSOR</h3>
+                                <p>@matriculados.extradois</p>
                             }
-                        
-                    </table>
-                    
-                </center>
-            </div>
-        </div>
-    </section>
-    
-    <script src="~/JS/Index.js">
-    </script>
-</body>
+
+
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </section>
+
+        <script src="~/JS/Index.js"></script>
+    </body>
 </html>
