--- a/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
@@ -12,18 +12,20 @@
     //Buscar os dados do formulario pelo método POST e inserir no objeto cliente
     usuario.cpf = Request.Form["cpfid"];
     usuario.senha = Request.Form["senhaid"];
-
+    string cpf = usuario.cpf;
     string nivel = Funcoes.Nivel_acesso(usuario);
 
     if (Funcoes.Login(usuario.cpf, usuario.senha))
     {
-
         HttpCookie cookie = new HttpCookie("UserLogin"); //Cria a estancia do obj HttpCookie passando o nome do mesmo
         cookie.Value = (nivel); //Define o valor do cookie
-        DateTime dtNow = DateTime.Now; //Time para expiração (10 min)
-        TimeSpan tsMinute = new TimeSpan(0, 0, 10, 0);
+        HttpCookie cookiecpf = new HttpCookie("UserLogin");
+        cookiecpf.Value = (cpf);
+        DateTime dtNow = DateTime.Now; //Time para expiração (10 h)
+        TimeSpan tsMinute = new TimeSpan(0, 10, 0, 0);
         cookie.Expires = dtNow + tsMinute;
         Response.Cookies.Add(cookie); //Adiciona o cookie
+        Response.Cookies.Add(cookiecpf);
 
         //Redireciona o usuário para a área de logado
         switch (cookie.Value.ToString())
@@ -39,14 +41,14 @@
             case "professor":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main_professor.cshtml";
+                        window.location.href = "/HTMLCSS/main.cshtml";
                     </script>
                 </text>
                 break;
             case "usuario":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main_user.cshtml";
+                        window.location.href = "/HTMLCSS/main.cshtml";
                     </script>
                 </text>
                 break;
