--- a/Projeto_Final/HTMLCSS/Index.cshtml
+++ b/Projeto_Final/HTMLCSS/Index.cshtml
@@ -22,7 +22,7 @@
                     <br />
                     <input type="password" id="senhaid" name="senhaid" class="campo_senha" placeholder="senha" minlength="6" maxlength="16" required />
                     <br />
-                    <input type="submit" value="LOGAR" /></a>
+                    <input type="submit" value="LOGAR" />
                     
                 </center>
 
