--- a/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
@@ -48,7 +48,7 @@
             case "usuario":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main.cshtml";
+                        window.location.href = "/HTMLCSS/main_userside.cshtml";
                     </script>
                 </text>
                 break;
