--- a/Projeto_Final/HTMLCSS/CSS/main.css
+++ b/Projeto_Final/HTMLCSS/CSS/main.css
@@ -14,8 +14,10 @@ img {
 
 .slideshow-container {
     max-width: 1000px;
+    max-height:400px;
     position: relative;
     margin: auto;
+
 }
 
 /* Hide the images by default */
@@ -25,10 +27,10 @@ img {
 
 /* Caption text */
 .text {
-    
+    font-family: 'Montserrat';
     color: #f2f2f2;
     font-size: 15px;
-    padding: 12px 10px;
+    padding: 30px 0px;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -38,6 +40,7 @@ img {
     .text:hover {
         background-color: rgba(0,0,0,0.5);
         font-weight: bold;
+        
     }
 
 /* Number text (1/3 etc) */
@@ -114,20 +117,22 @@ hr.green-line {
 }
 
 .texto-container {
-    max-width: 550px;
+    max-width: 950px;
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.4);
     -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
     -moz-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
     box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+    margin-left: 50px;
     float: left;
 }
 
 .texto-texto {
     padding-top: 18px;
-    padding-left: 5px;
-    padding-right: 5px;
-    text-align: left;
+    padding-bottom: 18px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: justify;
     font-size: 20px;
     font-family: 'Abel';
 }
