--- a/Projeto_Final/HTMLCSS/CSS/userarea.css
+++ b/Projeto_Final/HTMLCSS/CSS/userarea.css
@@ -10,14 +10,21 @@
 }
 
 .userinfo-container {
-    max-width:1000px;
-    width: 100%;
+    float: left;
+    max-width:500px;
     height: 500px;
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.4);
     -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
     -moz-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
     box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+}
+
+.userinfo {
+    padding-top: 18px;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: inline-block;
 }
 
 .userinfo h1 {
@@ -26,18 +33,31 @@
     text-decoration: none;
 }
 
-.userinfo a {
+a.editbtn {
     color: black;
     text-decoration: none;
     font-family: 'Abel';
+    float: right;
     bottom: 0;
-    right: 0;
+}
+
+.userinfo p, .userinfo h3 {
+    color: black;
+    font-family: 'Abel';
+    font-size: 15px;
+    text-align:justify;
+
+}
+
+hr.green-line {
+    border: 1px solid;
+    border-radius: 5px;
+    width: 300px;
 }
 
 .turmainfo-container {
-    max-width: 1000px;
-    width: 100%;
-    height: 500px;
+    float: right;
+    width: auto;
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.4);
     -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
@@ -45,8 +65,22 @@
     box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
 }
 
+.turmainfo {
+    padding-top: 18px;
+    padding-left: 18px;
+    padding-right: 18px;
+    display: ruby;
+}
+
 .turmainfo h1 {
     color: black;
     font-family: 'Bebas Neue';
     text-decoration: none;
+}
+
+.turmainfo p, .turmainfo h3 {
+    color: black;
+    font-family: 'Abel';
+    font-size: 15px;
+    text-align: justify;
 }
