--- a/Projeto_Final/HTMLCSS/Main/main_teachside.cshtml
+++ b/Projeto_Final/HTMLCSS/Main/main_teachside.cshtml
@@ -27,6 +27,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <!--ICONES-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,1,-25" />
     <!--CSS-->
@@ -53,21 +54,7 @@
                 </button>
                 <!--MATRICULA OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
                     <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
-                </div>
-                <!--REGISTRO-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">app_registration</span>
-                    Registro
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--REGISTRO OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                    <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
                 </div>
                 <!--LISTAGEM-->
                 <button class="dropdown-btn">
@@ -206,7 +193,7 @@
                             <div class="sidenews-text">
                                 <hr class="green-line" /><br />
                                 <p> 25/08/2022 </p>
-                                <a href="#">
+                                <a href="https://www.senairs.org.br/noticia/unidades-do-senai-rs-comemoram-aniversario">
                                     <h3>
                                         Unidades do Cenai-RS comemoram aniversário
                                     </h3>
@@ -231,7 +218,7 @@
 
                                 <hr class="green-line" /><br />
                                 <p> 19/08/2022 </p>
-                                <a href="#">
+                                <a href="https://www.senairs.org.br/industria-inteligente/programa-jovem-aprendiz">
                                     <h3>
                                         Jovem Aprendiz: tudo o que você precisa saber sobre o programa
                                     </h3>
