--- a/Projeto_Final/HTMLCSS/Main/main.cshtml
+++ b/Projeto_Final/HTMLCSS/Main/main.cshtml
@@ -101,7 +101,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="~/HTMLCSS/user_area.cshtml">
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
