--- a/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
@@ -33,7 +33,7 @@
             case "administrador":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main.cshtml";
+                        window.location.href = "/HTMLCSS/Main/main.cshtml";
                     </script>
                 </text>
                 break;
@@ -41,14 +41,14 @@
             case "professor":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main.cshtml";
+                        window.location.href = "/HTMLCSS/Main/main_teachside.cshtml";
                     </script>
                 </text>
                 break;
             case "usuario":
                 <text>
                     <script>
-                        window.location.href = "/HTMLCSS/main_userside.cshtml";
+                        window.location.href = "/HTMLCSS/Main/main_userside.cshtml";
                     </script>
                 </text>
                 break;
