--- a/Projeto_Final/HTMLTEMP/Checagem/check_listagem.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_listagem.cshtml
@@ -22,7 +22,7 @@
     {
         <text>
             <script>
-                window.location.href = "/HTMLCSS/main.cshtml";
+                window.location.href = "/HTMLCSS/Index.cshtml";
                 alert("ALGO DEU ERRADO");
             </script>
         </text>
@@ -42,7 +42,7 @@
             //Redireciona o usuário para a pagina inicial
             <text>
                 <script>
-                    window.location.href = "/HTMLCSS/main.cshtml";
+                    window.location.href = "/HTMLCSS/Main/main.cshtml";
                     alert("NIVEL DE ACESSO NÃO PERMITIDO");
                 </script>
             </text> }
