--- a/Projeto_Final/HTMLCSS/UserArea/userarea_aluno.cshtml
+++ b/Projeto_Final/HTMLCSS/UserArea/userarea_aluno.cshtml
@@ -134,6 +134,9 @@
                                 <h3>TELEFONE</h3>
                                 <p>@listagempessoa.telefone</p>
 
+                                <h3>SENHA</h3>
+                                <p>**********</p>
+
                             }
                         </center>
                         <a class="editbtn" href="#Editar">
