--- a/Projeto_Final/HTMLCSS/UserArea/userarea_aluno.cshtml
+++ b/Projeto_Final/HTMLCSS/UserArea/userarea_aluno.cshtml
@@ -41,66 +41,17 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/main.cshtml">
+                <a href="~/HTMLCSS/Main/main_userside.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
-                <!--MATRICULA-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">person_add</span>
-                    Matricula
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--MATRICULA OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
-                </div>
-                <!--REGISTRO-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">app_registration</span>
-                    Registro
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--REGISTRO OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                    <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
-                </div>
-                <!--LISTAGEM-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">list_alt</span>
-                    Listagem
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--LISTAGEM OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
-                </div>
-                <!--PESQUISA-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">search</span>
-                    Pesquisa
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--PESQUISA OPCOES-->
-                <div class="dropdown-container">
-                    <a href="#">Usuarios</a>
-                    <a href="#">Turmas</a>
-                    <a href="#">Salas</a>
-                </div>
                 <!--PROVAS-->
                 <a href="#">
                     <span class="material-symbols-outlined">quiz</span>
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a class="active" href="#">
+                <a class="active" href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -146,10 +97,10 @@
                     </div>
                 </div>
 
-                    <div class="turmainfo-container">
-                        <div class="turmainfo">
-                            <h1>MATRICULA DO USUARIO</h1>
-                            <center>
+                <div class="turmainfo-container">
+                    <div class="turmainfo">
+                        <h1>MATRICULA DO USUARIO</h1>
+                        <center>
                                 @{List<matricula> lista_mat = Funcoes.InfoUser_matric(usercpf);}
                                 @foreach (matricula matriculados in lista_mat)
                                 {
@@ -173,14 +124,15 @@
                                         <hr class="green-line" />
                                     </center>
                                 }
-                            </center>
+                        </center>
 
 
-                        </div>
                     </div>
                 </div>
-            </main>
-        </section>
+
+            </div>
+        </main>
+    </section>
 
         <script src="~/JS/Index.js"></script>
     </body>
