--- a/Projeto_Final/HTMLCSS/UserArea/userarea_prof.cshtml
+++ b/Projeto_Final/HTMLCSS/UserArea/userarea_prof.cshtml
@@ -134,6 +134,9 @@
                                 <h3>TELEFONE</h3>
                                 <p>@listagempessoa.telefone</p>
 
+                                <h3>SENHA</h3>
+                                <p>**********</p>
+
                             }
                         </center>
                         <a class="editbtn" href="#Editar">
@@ -145,25 +148,22 @@
 
                     <div class="turmainfo-container">
                         <div class="turmainfo">
-                            <h1>MATRICULA DO USUARIO</h1>
+                            <h1>Turmas do Professor</h1>
                             <center>
-                                @{List<matricula> lista_mat = Funcoes.InfoUser_matric(usercpf);}
-                                @foreach (matricula matriculados in lista_mat)
+                                @{List<turma> lista_turma = Funcoes.InfoProf_turmas(usercpf);}
+                                @foreach (turma turmas in lista_turma)
                                 {
                                     <h3>TURMA</h3>
-                                    <p>@matriculados.idmatricula</p>
+                                    <p>@turmas.idturma</p>
 
                                     <h3>CURSO</h3>
-                                    <p>@matriculados.idaluno</p>
+                                    <p>@turmas.nome_curso</p>
 
                                     <h3>TURNO</h3>
-                                    <p>@matriculados.idturma</p>
+                                    <p>@turmas.turno</p>
 
                                     <h3>SALA</h3>
-                                    <p>Sala @matriculados.extraum</p>
-
-                                    <h3>PROFESSOR</h3>
-                                    <p>@matriculados.extradois</p>
+                                    <p>Sala @turmas.idsala</p>
                                     <br />
                                     <br />
                                     <center>
@@ -175,9 +175,9 @@
 
                         </div>
                     </div>
-                </div>
-            </main>
-        </section>
+            </div>
+        </main>
+    </section>
 
         <script src="~/JS/Index.js"></script>
     </body>
