--- a/Projeto_Final/HTMLCSS/CSS/userarea.css
+++ b/Projeto_Final/HTMLCSS/CSS/userarea.css
@@ -12,7 +12,7 @@
 .userinfo-container {
     float: left;
     max-width:500px;
-    height: 500px;
+    height: auto;
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.4);
     -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
