--- a/Projeto_Final/HTMLCSS/Editar/edit_user.cshtml
+++ b/Projeto_Final/HTMLCSS/Editar/edit_user.cshtml
@@ -78,20 +78,32 @@
 
                                 <h3>NOME</h3>
                                 <p>@listagempessoa.nome</p>
+                                <form method="post" onsubmit="return checkPassword(this);" action="#">
+                                    <h3>EMAIL</h3>
+                                    <input type="email" name="emailid" id="emailid" class="campo_email"
+                                           placeholder="@listagempessoa.email" maxlength="100" required />
 
-                                <h3>EMAIL</h3>
-                                <p>@listagempessoa.email</p>
+                                    <h3>TELEFONE</h3>
+                                    <input type="tel" name="telid" class="campo_tel"
+                                           placeholder="@listagempessoa.telefone" minxlength="11"
+                                           maxlength="14" required />
 
-                                <h3>TELEFONE</h3>
-                                <p>@listagempessoa.telefone</p>
-
-                                <h3>SENHA</h3>
-                                <p>**********</p>
-
-                            }
-                        </center>
-                        <a class="editbtn" href="~/HTMLCSS/Editar/edit_user.cshtml">
-                            EDITAR <span class="material-symbols-outlined">edit_note</span>
+                                    <h3>SENHA</h3>
+                                    <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
+                                           placeholder="nova senha" minlength="6" maxlength="16" required />
+                                    <br />
+                                    <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
+                                           placeholder="verifique nova senha" minlength="6" maxlength="16" required />
+                                    <br />
+                                    <button>
+                                        <span class="material-symbols-outlined">edit_note</span> editar
+                                    </button>
+                                    <br />
+                                </form>
+                             }
+                            </center>
+                        <a class="cnclbtn" href="~/HTMLCSS/UserArea/userarea_aluno.cshtml">
+                            <span class="material-symbols-outlined">arrow_back</span> voltar
                         </a>
 
                     </div>
