--- a/Projeto_Final/HTMLCSS/Registro/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro.cshtml
@@ -100,8 +100,10 @@
             <div class="content">
                 <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLTEMP/Passagem/registrando.cshtml">
                     <div class="container">
-                        <center>
                             <div class="registro">
+                                    <h6>
+                                        REGISTRO DE USUARIOS!
+                                    </h6>
                                 <!--NIVEL DE ACESSO-->
                                 <div class="nivel">
 
@@ -136,7 +138,6 @@
                                 <input type="submit" placeholder="REGISTRAR" /><br />
 
                             </div>
-                        </center>
                     </div>
                 </form>
             </div>
