--- a/Projeto_Final/HTMLCSS/CSS/registro_sala_setor.css
+++ b/Projeto_Final/HTMLCSS/CSS/registro_sala_setor.css
@@ -11,15 +11,14 @@ body, html {
     overflow-y: hidden;
 }
 
-.content {
-    display: inline-block;
-    float: right;
+main {
     padding-top: 50px;
 }
 
-.container {
+.sala-container {
     width: 400px;
     height: 100%;
+    float: left;
     background: rgba(255, 255, 255, 0.13);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -28,23 +27,34 @@ body, html {
     border: 1px solid rgba(255, 255, 255, 0.24);
 }
 
+.setor-container {
+    width: 400px;
+    height: 100%;
+    float: right;
+    background: rgba(255, 255, 255, 0.13);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.9px);
+    -webkit-backdrop-filter: blur(6.9px);
+    border: 1px solid rgba(255, 255, 255, 0.24);
+}
+
+.registro-sala, .registro-setor {
+    padding: 50px;
+    align-items: center;
+    display: inline-grid;
+}
+
+
+
 h6 {
     font-family: "Open Sans Hebrew", "Open Sans", sans-serif;
     font-weight: bold;
-    text-align: center;
-}
-
-fieldset {
-    font-family: 'Abel';
-    border-radius: 8px;
-    text-align: left;
-    width: 200px;
+    text-align:center;
 }
 
 
-.registro {
-    padding: 50px;
-}
+
 
 input[type=email],
 input[type=password],
@@ -63,7 +73,7 @@ select {
 
 
 
-input[type=submit] {
+input[type=submit]{
     background-color: #c5f6f1;
     border: none;
     width: 200px;
@@ -71,8 +81,10 @@ input[type=submit] {
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 5px;
+    
 }
 
-    input[type=submit]:hover {
-        background-color: #b3ddd9;
-    }
+input[type=submit]:hover{
+    background-color: #b3ddd9;
+}
+
