--- a/Projeto_Final/HTMLCSS/Registro/registro_sala_setor.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro_sala_setor.cshtml
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,1,-25" />
     <!--CSS-->
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
-    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro.css" />
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro_sala_setor.css" />
 
     <title>CENAI</title>
 </head>
@@ -98,22 +98,38 @@
     </nav>
         <main>
             <div class="content">
-                <form method="post" action="~/HTMLTEMP/Passagem/registrando_sala.cshtml">
-                    <div class="container">
-                        <center>
-                            <div class="registro">
+                <CENTER>
+                    <form method="post" action="~/HTMLTEMP/Passagem/registrando_sala.cshtml">
+                        <div class="sala-container">
+                            <div class="registro-sala">
+                                <h6>REGISTRO DE SALA!</h6>
                                 <!--NOME-->
                                 <input type="text" name="salaid" id="salaid" class="campo_sala"
                                        placeholder="Numero da sala" maxlength="3" required /><br />
-                               
+
 
                                 <!--ENVIAR-->
                                 <input type="submit" placeholder="REGISTRAR" /><br />
 
                             </div>
-                        </center>
-                    </div>
-                </form>
+                        </div>
+                    </form>
+                    <form method="post" action="~/HTMLTEMP/Passagem/registrando_setor.cshtml">
+                        <div class="setor-container">
+                            <div class="registro-setor">
+                                <h6>REGISTRO DE SETOR!</h6>
+                                <!--NOME-->
+                                <input type="text" name="setorid" id="setorid" class="campo_setor"
+                                       placeholder="Setor" maxlength="20" required /><br />
+
+
+                                <!--ENVIAR-->
+                                <input type="submit" placeholder="REGISTRAR" /><br />
+
+                            </div>
+                        </div>
+                    </form>
+                </CENTER>
             </div>
         </main>
     </section>
