--- a/Projeto_Final/HTMLTEMP/Exclusao/delete_user.cshtml
+++ b/Projeto_Final/HTMLTEMP/Exclusao/delete_user.cshtml
@@ -5,12 +5,12 @@
     pessoa Pessoa = new pessoa();
     Pessoa.cpf = Request.Form["userid"];
 
-    Funcoes.dltsuser(Pessoa);
+    Funcoes.dltuser(Pessoa);
     
 
     <text>
         <script>
-            window.location.href = "/HTMLCSS/Listagem/Listagem.cshtml";
+            window.location.href = "/HTMLCSS/Listagem/Listagem_Aluno.cshtml";
         </script>
     </text>
 }
