--- a/Projeto_Final/HTMLCSS/Editar/edit_user.cshtml
+++ b/Projeto_Final/HTMLCSS/Editar/edit_user.cshtml
@@ -41,17 +41,65 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/Main/main_userside.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
+                <!--MATRICULA-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">person_add</span>
+                    Matricula
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                </div>
+                <!--REGISTRO-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">app_registration</span>
+                    Registro
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--REGISTRO OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                </div>
+                <!--LISTAGEM-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">list_alt</span>
+                    Listagem
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--LISTAGEM OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                </div>
+                <!--PESQUISA-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">search</span>
+                    Pesquisa
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--PESQUISA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="#">Usuarios</a>
+                    <a href="#">Turmas</a>
+                    <a href="#">Salas</a>
+                </div>
                 <!--PROVAS-->
                 <a href="#">
                     <span class="material-symbols-outlined">quiz</span>
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a class="active" href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
