--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Admins.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Admins.cshtml
@@ -27,7 +27,7 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -52,8 +52,7 @@
                 <div class="dropdown-container">
                     <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                 </div>
                 <!--LISTAGEM-->
                 <button class="dropdown-btn">
@@ -63,7 +62,7 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a clTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
@@ -86,7 +85,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="#">
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -99,58 +98,56 @@
         </nav>
 
         <div class="content" id="content">
-            <div class="container">
-                <div class="opcoes">
-                    
-
-
-                    <a onclick="poof('lista')">Listar Todos</a>
-                </div>
-                    
-            </div>
-            <br />
-            <div class="lista" id="lista" style="visibility:hidden">
-                <center>
+            <div class="lista" id="lista">
                     <table>
                         <tr>
                             <th>CPF</th>
                             <th>NOME</th>
                             <th>EMAIL</th>
                             <th>TELEFONE</th>
-                            <th>NIVEL DE ACESSO</th>
+                            <th>
+                                <button class="dropdown-btn">
+                                    NIVEL DE ACESSO<span class="material-symbols-outlined">expand_more</span>
+                                </button>
+                                <div class="dropdown-container">
+                                    <a href="~/HTMLCSS/Listagem/Listagem_Admins.cshtml">administrador</a><br />
+                                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos.cshtml">usuario</a><br />
+                                    <a href="~/HTMLCSS/Listagem/Listagem_Professores.cshtml">professor</a><br />
+                                </div>
+                            </th>
                             <th>OPÇÕES</th>
                         </tr>
-                        @{List<pessoa> lista = Funcoes.Listagem_Pessoa();}
-                        @foreach (pessoa listagempessoa in lista)
+                        @{List<pessoa> lista = Funcoes.Listagem_Admins();}
+                        @foreach (pessoa listagemadmins in lista)
                         {
                         <tr>
-                            <td>@listagempessoa.cpf</td>
-                            <td>@listagempessoa.nome</td>
-                            <td>@listagempessoa.email</td>
-                            <td>@listagempessoa.telefone</td>
-                            <td>@listagempessoa.nivacesso</td>
+                            <td>@listagemadmins.cpf</td>
+                            <td>@listagemadmins.nome</td>
+                            <td>@listagemadmins.email</td>
+                            <td>@listagemadmins.telefone</td>
+                            <td>@listagemadmins.nivacesso</td>
                             <td>
-                                <form method="post" action="#editar">
-                                    <input type="text" style="visibility:hidden" id="userid" name="userid" value="@listagempessoa.cpf" />
-                                    <button class="btn_edit">
-                                        <span class="glyphicon glyphicon-edit"></span> Editar
-                                    </button>
-                                </form>
+                                <div class="options">
+                                    <form method="post" action="#editar">
+                                        <input type="hidden" id="userid" name="userid" value="@listagemadmins.cpf" />
+                                        <button class="btn_edit">
+                                            <span class="glyphicon glyphicon-edit"></span>
+                                        </button>
+                                    </form>
+                                    <form method="post" action="~/HTMLTEMP/Exclusao/delete_user.cshtml">
+                                        <input type="hidden" id="userid" name="userid" value="@listagemadmins.cpf" />
 
-                                <form method="post" action="~/HTMLTEMP/Exclusao/delete_user.cshtml">
-                                    <input type="text" style="visibility:hidden" id="userid" name="userid" value="@listagempessoa.cpf" />
-                                    
-                                    <button class="btn_remove">
-                                        <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                    </button>
-                                </form>
+                                        <button class="btn_remove">
+                                            <span class="glyphicon glyphicon-remove-circle"></span>
+                                        </button>
+                                    </form>
+                                </div>
+                                
                             </td>
                         </tr>
                             
                         }
                     </table>
-                    
-                </center>
             </div>
         </div>
     </section>
