--- a/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
@@ -29,7 +29,7 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -54,8 +54,7 @@
                 <div class="dropdown-container">
                     <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                 </div>
                 <!--LISTAGEM-->
                 <button class="dropdown-btn">
@@ -65,9 +64,9 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
-                    <a class="active" href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                 </div>
                 <!--PESQUISA-->
@@ -88,7 +87,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="#">
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -114,12 +113,14 @@
                             <tr>
                                 <td>Sala @salas.numsala</td>
                                 <td>
-                                    <form method="post" action="~/HTMLTEMP/Exclusao/delete_sala.cshtml">
-                                        <input type="text" style="visibility:hidden" id="salaid" name="salaid" value="@salas.idsala" />
-                                        <button>
-                                            <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                        </button>
-                                    </form>
+                                    <div class="options">
+                                        <form method="post" action="~/HTMLTEMP/Exclusao/delete_sala.cshtml">
+                                            <input type="text" style="visibility:hidden" id="salaid" name="salaid" value="@salas.idsala" />
+                                            <button>
+                                                <span class="glyphicon glyphicon-remove-circle"></span> 
+                                            </button>
+                                        </form>
+                                    </div>
                                 </td>
                             </tr>
                         }
