--- a/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
@@ -27,7 +27,7 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -52,8 +52,7 @@
                 <div class="dropdown-container">
                     <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                 </div>
                 <!--LISTAGEM-->
                 <button class="dropdown-btn">
@@ -63,10 +62,10 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                    <a class="active" href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                 </div>
                 <!--PESQUISA-->
                 <button class="dropdown-btn">
@@ -86,7 +85,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="#">
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -99,16 +98,7 @@
         </nav>
 
         <div class="content" id="content">
-            <div class="container">
-                <div class="opcoes">
-                    <center>
-                        <a onclick="poof('lista')">Listar Setores</a>
-                    </center>
-                </div>
-                    
-            </div>
-            <br />
-            <div class="lista" id="lista" style="visibility:hidden">
+            <div class="lista" id="lista" >
                 <center>
                     <table>
                         <tr>
@@ -120,13 +110,17 @@
                         {
                             <tr>
                                 <td>@setores.nomesetor</td>
+
                                 <td>
-                                    <form method="post" action="~/HTMLTEMP/Exclusao/delete_setor.cshtml">
-                                        <input type="text" style="visibility:hidden" id="setorid" name="setorid" value="@setores.idsetor" />
-                                        <button>
-                                            <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                        </button>
-                                    </form>
+                                    <div class="options">
+                                        <form method="post" action="~/HTMLTEMP/Exclusao/delete_setor.cshtml">
+                                            <input type="text" style="visibility:hidden" id="setorid" name="setorid" value="@setores.idsetor" />
+                                            <button>
+                                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                            </button>
+                                        </form>
+                                    </div>
+                                    
                                 </td>
                             </tr>
                         }
