--- a/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
@@ -27,7 +27,7 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -52,8 +52,7 @@
                 <div class="dropdown-container">
                     <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                 </div>
                 <!--LISTAGEM-->
                 <button class="dropdown-btn">
@@ -63,8 +62,8 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
-                    <a class="active" href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                 </div>
@@ -86,7 +85,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="#">
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -99,16 +98,8 @@
         </nav>
 
         <div class="content" id="content">
-            <div class="container">
-                <div class="opcoes">
-                    <center>
-                        <a onclick="poof('lista')">Listar Turmas</a>
-                    </center>
-                </div>
-                    
-            </div>
-            <br />
-            <div class="lista" id="lista" style="visibility:hidden">
+            
+            <div class="lista" id="lista">
                 <center>
                     <table>
                         <tr>
@@ -129,20 +120,22 @@
                             <td>@turmas.idsala</td>
                             <td>@turmas.idprofe</td>
                             <td>
-                                <form method="post" action="#editar">
-                                    <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
-                                    <button class="btn_edit">
-                                        <span class="glyphicon glyphicon-edit"></span> Editar
-                                    </button>
-                                </form>
+                                <div class="options">
+                                    <form method="post" action="#editar">
+                                        <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
+                                        <button class="btn_edit">
+                                            <span class="glyphicon glyphicon-edit"></span> 
+                                        </button>
+                                    </form>
 
-                                <form method="post" action="~/HTMLTEMP/Exclusao/delete_turma.cshtml">
-                                    <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
+                                    <form method="post" action="~/HTMLTEMP/Exclusao/delete_turma.cshtml">
+                                        <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
 
-                                    <button class="btn_remove">
-                                        <span class="glyphicon glyphicon-remove-circle"></span> Remover
-                                    </button>
-                                </form>
+                                        <button class="btn_remove">
+                                            <span class="glyphicon glyphicon-remove-circle"></span>
+                                        </button>
+                                    </form>
+                                </div>
                             </td>
                         </tr>
                             
