--- a/Projeto_Final/HTMLCSS/Main/main.cshtml
+++ b/Projeto_Final/HTMLCSS/Main/main.cshtml
@@ -42,7 +42,7 @@
             <!--SIDEBAR-->
             <div class="sidenav" onclick="Dropdownbtn()">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -67,8 +67,7 @@
                 <div class="dropdown-container">
                     <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                     <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                 </div>
                 <!--LISTAGEM-->
                 <button class="dropdown-btn">
@@ -78,7 +77,7 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
