--- a/Projeto_Final/HTMLCSS/Registro/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro.cshtml
@@ -26,7 +26,7 @@
         <!--SIDEBAR-->
         <div class="sidenav" onclick="Dropdownbtn()">
             <!--PAGINA INICIAL-->
-            <a href="~/HTMLCSS/main.cshtml">
+            <a href="~/HTMLCSS/Main/main.cshtml">
                 <span class="material-symbols-outlined">home</span>
                 Pagina Inicial
             </a>
@@ -49,10 +49,9 @@
             </button>
             <!--REGISTRO OPCOES-->
             <div class="dropdown-container">
-                <a class="active" href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                 <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Registro/registro_sala.cshtml">Salas</a>
-                <a href="~/HTMLCSS/Registro/registro_setores.cshtml">Setores</a>
+                <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
             </div>
             <!--LISTAGEM-->
             <button class="dropdown-btn">
@@ -62,7 +61,7 @@
             </button>
             <!--LISTAGEM OPCOES-->
             <div class="dropdown-container">
-                <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                 <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
@@ -85,7 +84,7 @@
                 Provas
             </a>
             <!--AREA DO USUARIO-->
-            <a href="#">
+            <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                 <span class="material-symbols-outlined">account_circle</span>
                 Área do Usuario
             </a>
