--- a/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_login.cshtml
@@ -1,8 +1,6 @@
 ﻿@using Projeto_Final.CSHARP;
 
 @{
-    Layout = null;
-
     //Conecta com o BD
     BancoDeDados.DBConnect();
 
@@ -19,10 +17,10 @@
     {
         HttpCookie cookie = new HttpCookie("UserLogin"); //Cria a estancia do obj HttpCookie passando o nome do mesmo
         cookie.Value = (nivel); //Define o valor do cookie
-        HttpCookie cookiecpf = new HttpCookie("UserLogin");
+        HttpCookie cookiecpf = new HttpCookie("UserCPF");
         cookiecpf.Value = (cpf);
-        DateTime dtNow = DateTime.Now; //Time para expiração (10 h)
-        TimeSpan tsMinute = new TimeSpan(0, 10, 0, 0);
+        DateTime dtNow = DateTime.Now; //Time para expiração (10min)
+        TimeSpan tsMinute = new TimeSpan(0, 0, 10, 0);
         cookie.Expires = dtNow + tsMinute;
         Response.Cookies.Add(cookie); //Adiciona o cookie
         Response.Cookies.Add(cookiecpf);
@@ -61,7 +59,7 @@
         <text>
             <script>
 
-                window.location.href = "/HTMLCSS/Index.cshtml";
+                window.location.href = "/Index.cshtml";
                 alert("SENHA OU CPF INCORRETOS, TENTE NOVAMENTE");
             </script>
         </text>
