--- a/Projeto_Final/HTMLTEMP/Checagem/check_registro.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_registro.cshtml
@@ -23,7 +23,7 @@
     {
         <text>
             <script>
-                window.location.href = "/HTMLCSS/Index.cshtml";
+                window.location.href = "/Index.cshtml";
                 alert("ALGO DEU ERRADO");
             </script>
         </text>
@@ -47,6 +47,7 @@
                 <script>
                     window.location.href = "/HTMLCSS/Main/main.cshtml";
                     alert("NIVEL DE ACESSO NÃO PERMITIDO");
+                    alert("@cookie.Value.ToString()");
                 </script>
             </text> 
         }
